// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating short property with minimum value greater than maximum value should have validation failures 1`] = `"Short Property ShortIdentity has min value greater than max value."`;

exports[`when validating short property with minimum value greater than maximum value should have validation failures 2`] = `
Object {
  "column": 6,
  "line": 9,
  "tokenText": "min value",
}
`;

exports[`when validating short property with minimum value greater than maximum value should have validation failures 3`] = `"Short Property ShortProperty has min value greater than max value."`;

exports[`when validating short property with minimum value greater than maximum value should have validation failures 4`] = `
Object {
  "column": 6,
  "line": 15,
  "tokenText": "min value",
}
`;
